[workspace]
resolver = "2"
members = [
	"crates/icy_draw", 
	"crates/icy_engine",
	"crates/icy_engine_gui",
	"crates/icy_play", 
	"crates/icy_sauce", 
	"crates/icy_term",
	"crates/icy_view",
	"crates/icy_view_gui",
	"crates/iced_engine_gui",
]
[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT or Apache-2.0"

[workspace.dependencies]
icy_engine = { path = "crates/icy_engine" }
icy_engine_gui = { path = "crates/icy_engine_gui" }
icy_sauce = { path = "crates/icy_sauce" }
icy_sixel = "0.1.3"
icy_view_gui = { path = "crates/icy_view_gui" }
iced_engine_gui = { path = "crates/iced_engine_gui" } 

codepages = { git ="https://github.com/mkrueger/icy_board" }

zip = { version = "5.1.1"}
lazy_static = "1.4.0"
semver = "1.0.27"
thiserror = "2.0.17"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
walkdir = "2.5.0"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.10.0"
fluent-bundle = "0.16.0"
rust-embed = "8.3.0"
once_cell = "1.18.0"
toml = "0.8.23"
bstr = "1.11.3"
regex = "1.11.3"
directories = "6.0.0"
tokio = { version = "1.47.1", features = ["full"] }
rodio = { version = "0.21.1" }
arboard = { version = "3.6.1" }
anyhow = "1.0.100"
webbrowser = "1.0.6"

iced = "0.14.0-dev"
#iced_aw = { version = "0.13", default-features = 	false, features = ["menu"] }
iced_graphics = { git = "https://github.com/iced-rs/iced.git" }
iced_core = { git = "https://github.com/iced-rs/iced.git" }

egui = "0.33.0"
eframe = "0.33.0"
# eframe = { version = "0.27.2", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ], optional = true }
egui_extras = { version="0.33.0", features = ["all_loaders", "svg", "image"] }
egui_glow = "0.33.0"
glow = "0.16.0"
#egui-modal = "0.6.0"
egui-modal = { git = "https://github.com/mkrueger/egui-modal.git" }
egui-bind = { git = "https://github.com/mkrueger/egui-bind" }
egui_file = "0.24.0"

egui-notify = "0.21.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced_aw.git = "https://github.com/iced-rs/iced_aw.git"
