[workspace]
resolver = "2"
members = [
#	"crates/icy_draw", 
	"crates/icy_engine",
	"crates/icy_engine_gui",
 	"crates/icy_play", 
	"crates/icy_term",
	"crates/icy_engine_scripting",
#	"crates/icy_view_gui",
	"crates/icy_mail",
	"crates/icy_parser_core",
]
[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT or Apache-2.0"

[workspace.dependencies]
icy_engine = { path = "crates/icy_engine" }
icy_parser_core = { path = "crates/icy_parser_core"} 
icy_engine_scripting = { path = "crates/icy_engine_scripting"} 

#icy_engine_gui = { path = "crates/icy_engine_gui" }
icy_sauce = "0.3.4"
#icy_sauce = { path = "../icy_sauce" }
icy_sixel = "0.2.0"
icy_net = { git ="https://github.com/mkrueger/icy_board" }
#icy_net = { path ="../../../icy_board/crates/icy_net" }

#icy_view_gui = { path = "crates/icy_view_gui" }
icy_engine_gui = { path = "crates/icy_engine_gui" } 
#libyaff = { path = "../libyaff" }
libyaff = { git = "https://github.com/mkrueger/libyaff" }

codepages = { git ="https://github.com/mkrueger/icy_board" }
zip = { version = "6.0.0"}
lazy_static = "1.5.0"
semver = "1.0.27"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.28"
flexi_logger = "0.31.7"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
walkdir = "2.5.0"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.10.0"
fluent-bundle = "0.16.0"
rust-embed = "8.3.0"
once_cell = "1.18.0"
toml = "0.8.23"
bstr = "1.12.1"
fastrand = "2.3.0"
base64 = "0.22.1"
clipboard-rs = "0.3.1"
rmcp = "0.9.1"
jsonrpc-core = "18.0"
serde_json = "1.0"
image = "0.25.9"
bitflags = "2.10.0"
rfd = "0.16.0"
open = "5.3.3"

regex = "1.12.2"
directories = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }
rodio = { version = "0.21.1" }
anyhow = "1.0.100"
webbrowser = "1.0.6"
rayon = "1.11.0"
notify = "8.2.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }

iced = "0.14.0-dev"
#iced_aw = { git = "https://github.com/iced-rs/iced_aw.git" }

versions = "7.0.0"
github_release_check = "0.2.1"
parking_lot = "0.12.5"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.profiling]
inherits = "release"
debug = true
strip = false

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"
iced_aw.git = "https://github.com/iced-rs/iced_aw.git"
