[workspace]
resolver = "2"
members = [
	"crates/icy_draw", 
	"crates/icy_engine",
	"crates/icy_engine_gui",
	"crates/icy_engine_gui_macros",
	"crates/icy_engine_edit",
 	"crates/icy_play", 
	"crates/icy_term",
	"crates/icy_engine_scripting",
	"crates/icy_view",
	"crates/icy_mail",
	"crates/icy_parser_core",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
license = "MIT or Apache-2.0"

[workspace.dependencies]
icy_engine = { path = "crates/icy_engine" }
icy_parser_core = { path = "crates/icy_parser_core"} 
icy_engine_scripting = { path = "crates/icy_engine_scripting"} 

icy_sauce =  { git ="https://github.com/mkrueger/icy_sauce" }

#icy_sauce = { path = "../icy_sauce" }
icy_sixel = "0.5.0"
icy_net = { git ="https://github.com/mkrueger/icy_board" }
#icy_net = { path ="../icy_board/crates/icy_net" }
#unarc-rs = { path ="../unarc-rs" }
unarc-rs = { git = "https://github.com/mkrueger/unarc-rs" }
retrofont = { git = "https://github.com/mkrueger/retrofont" }
#retrofont = { path ="../retrofont/crates/retrofont" }

icy_engine_gui = { path = "crates/icy_engine_gui" } 
icy_engine_edit = { path = "crates/icy_engine_edit" }

#libyaff = { path = "../libyaff" }
libyaff = { git = "https://github.com/mkrueger/libyaff" }

codepages = { git ="https://github.com/mkrueger/icy_board" }
zip = "7.0.0"
lazy_static = "1.5.0"
semver = "1.0.27"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
flexi_logger = "0.31.7"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
walkdir = "2.5.0"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.10.0"
fluent-bundle = "0.16.0"
rust-embed = "8.3.0"
once_cell = "1.18.0"
toml = "0.9.10"
bstr = "1.12.1"
fastrand = "2.3.0"
base64 = "0.22.1"
rmcp = "0.12.0"
serde_json = "1.0.146"
image = "0.25.9"
bitflags = "2.10.0"
rfd = "0.16.0"
open = "5.3.3"
bytemuck = "1.24.0"

regex = "1.12.2"
directories = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
anstream = "0.6.21"
rodio = { version = "0.21.1" }
anyhow = "1.0.100"
webbrowser = "1.0.6"
rayon = "1.11.0"
notify = "8.2.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
string-interner = "0.19.0"
cascada = "0.3.0"
gif = "0.14.1"
quantette = "0.5.1"
crc32fast = "1.5.0"

# SVG and font rendering
resvg = "0.45"
ab_glyph = "0.2"

#icy_ui = { git = "https://github.com/mkrueger/icy_ui", branch = "master" }
icy_ui = { path = "../icy/crates/icy_ui" }

versions = "7.0.0"
github_release_check = "0.2.1"
parking_lot = "0.12.5"
clap-i18n-richformatter = { git = "https://github.com/eatradish/clap-i18n-richformatter" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.profiling]
inherits = "release"
debug = true
strip = false

## NOTE: This workspace used to override `iced_aw` with a local vendored copy.
## The `vendor/iced_aw` directory is not present in this repo checkout, which breaks
## `cargo fetch/check` in clean environments. If you keep a local vendor, re-add this
## patch locally.
[patch.crates-io]
# sevenz-rust2 v0.20.0 pins lzma-rust2 = "=0.15.3" which is incompatible with crc v2.x
# Override to v0.15.4 which has the fix
lzma-rust2 = { git = "https://github.com/hasenbanck/lzma-rust2", branch = "master" }