[package]
name = "iced_engine_gui"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { workspace = true }
codepages = { workspace = true }
serde = { workspace = true }
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
image = { version = "0.25.1", features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dds", "qoi"] }
iced = { workspace = true, features = [ "tokio", "svg", "image", "advanced", "debug", "canvas", "lazy", "wgpu"  ]  }
iced_graphics = { workspace = true }
iced_core = { workspace = true }

raqote = { version = "0.8.5", default-features = false }
rustybuzz = "0.20.0"
evictor = { version = "0.5.1", default-features = false }
wgpu = "26.0"

lazy_static = { workspace = true }

web-time = "1.0.0"
log = { workspace = true }

i18n-embed = { workspace = true }
i18n-embed-fl= { workspace = true }
rust-embed = { workspace = true } 
once_cell = { workspace = true } 
regex = { workspace = true }

rand = "0.9.2"
glam = "0.25"
bytemuck = { version = "1.0", features = ["derive"] }
