[package]
name = "icy_draw"
version = "0.5.0"
edition = "2024"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A drawing program for ANSI & ASCII art and other text-based art forms."
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI Framework - iced based
iced = { workspace = true, features = ["wgpu", "highlighter"] }
iced_aw = { workspace = true, features = ["context_menu"] }

# GPU/Shader support
bytemuck = { version = "1.0", features = ["derive"] }

# Layout engine
cascada = { workspace = true }

# SVG rendering for icons
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"

# Logging
log = { workspace = true }
flexi_logger = { workspace = true }

# CLI
clap = { workspace = true }
github_release_check = "0.2.1"

# Core icy_* crates
icy_engine = { workspace = true }
icy_engine_edit = { workspace = true }
icy_engine_gui = { workspace = true }
icy_engine_scripting = { workspace = true }
icy_view_gui = { workspace = true }

# Lua scripting for plugins
mlua = { workspace = true }
regex = { workspace = true }
icy_sauce = { workspace = true }
retrofont = { workspace = true }

# Encoding
base64 = { workspace = true }
codepages = { workspace = true }
libyaff = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0.145"
toml = { workspace = true }

# CRC32 for autosave path hashing
crc32fast = "1.4"

# i18n
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
lazy_static = { workspace = true }
directories = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
image = { version = "0.24", features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld", "jpeg_rayon", "openexr", "qoi"] }
gif = "0.13"
quantette = { version = "0.5.1", features = ["image"] }

# TTF font rasterization
fontdue = "0.9"

# File handling
walkdir = { workspace = true }
notify = { workspace = true }
rfd = { workspace = true }
open = { workspace = true }

# Clipboard
clipboard-rs = { workspace = true }

[features]
default = []

[build-dependencies]
winres = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

[package.metadata.bundle]
name = "Icy Draw"
identifier = "com.github.icy_draw"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
revision=""
assets = [
    ["target/release/icy_draw", "/usr/bin/", "755"],
    ["build/linux/icy_draw.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_draw.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_draw.png", "644"],
]
