[package]
name = "icy_draw"
version = "0.5.0"
edition = "2021"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
description = "A drawing program for ANSI & ASCII art and other text-based art forms."
license = "Apache-2.0"
repository = "https://github.com/mkrueger/icy_tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# UI Framework - iced based
iced = { workspace = true, features = ["wgpu", "highlighter"] }

# GPU/Shader support
bytemuck = { workspace = true, features = ["derive"] }

# Layout engine
cascada = { workspace = true }

# SVG rendering for icons
resvg = "0.45.1"
tiny-skia = "0.11"
usvg = "0.45.1"

# Logging
log = { workspace = true }
flexi_logger = { workspace = true }

# CLI
clap = { workspace = true }
clap-i18n-richformatter = { workspace = true }
github_release_check = { workspace = true }

# Core icy_* crates
icy_engine = { workspace = true }
icy_engine_edit = { workspace = true }
icy_engine_gui = { workspace = true }
icy_engine_scripting = { workspace = true }

# WebSocket for collaboration
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Lua scripting for plugins
mlua = { workspace = true }
regex = { workspace = true }
icy_sauce = { workspace = true }
retrofont = { workspace = true }

# Encoding
base64 = { workspace = true }
codepages = { workspace = true }
libyaff = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bitcode = { version = "0.6", features = ["serde"] }

# CRC32 for autosave path hashing
crc32fast = { workspace = true }

# i18n
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
lazy_static = { workspace = true }
directories = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
image = { workspace = true, features = ["png", "bmp", "jpeg"] }
gif = { workspace = true }
quantette = { workspace = true, features = ["image"] }

# AV1 video export (pure Rust, outputs IVF container)
# NOTE: `rav1e/asm` requires `nasm` at build time on x86_64.
rav1e = { version = "0.8", default-features = false }
num_cpus = "1.16"

# Parallel iteration for performance
rayon = { workspace = true }

# TTF font rasterization
fontdue = "0.9"

# File handling
walkdir = { workspace = true }
notify = { workspace = true }
rfd = { workspace = true }
open = { workspace = true }

# MCP (rmcp + HTTP server)
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
axum = "0.8"
schemars = "1.0"

[features]
default = []

# Opt-in: enable rav1e's NASM-based assembly optimizations.
rav1e-asm = ["rav1e/asm"]

[build-dependencies]
winres = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

[package.metadata.bundle]
name = "Icy Draw"
identifier = "com.github.icy_draw"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
revision=""
assets = [
    ["target/release/icy_draw", "/usr/bin/", "755"],
    ["build/linux/icy_draw.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_draw.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_draw.png", "644"],
]
