[package]
name = "icy_engine"
version = "0.5.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "minimal"]
minimal = []

[dependencies]
lazy_static = { workspace = true }
base64 =  { workspace = true }
log = { workspace = true }
rfind_url = "0.4.4"
chrono = { workspace = true }
png = "0.18.0"
regex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
byteorder = "1"
bstr = { workspace = true }
codepages = { workspace = true }
rayon = { workspace = true }
icy_net = { workspace = true }
parking_lot = { workspace = true }

icy_sauce = { workspace = true }
icy_sixel = { workspace = true }
icy_parser_core = { workspace = true }
bitflags = { workspace = true }
utf8parse = "0.2"
unarc-rs = { workspace = true }

zip = { workspace = true }
libyaff = { workspace = true }

# Image export support
image = { workspace = true }
gifski = "1.32.0"
lodepng = {version ="3.12.1", default-features = false, features = ["cfzlib"] }

imgref = "1.12.0"
rgb = "0.8.52"

[dev-dependencies]
walkdir = { workspace = true }
pretty_assertions = "1.4.1"
env_logger = "0.11"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "render_region"
harness = false

[[bench]]
name = "xbin_loading"
harness = false
[lints]
workspace = true
