[package]
name = "icy_engine_edit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
collaboration = ["tokio", "tokio-tungstenite", "futures-util", "serde_json"]

[dependencies]
icy_engine = { workspace = true }
icy_parser_core = { workspace = true }
icy_sauce = { workspace = true, features = ["serde"] }
retrofont = { workspace = true, features = ["serde"]}
codepages = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
parking_lot = { workspace = true}
bitflags = { workspace = true}
lazy_static = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
clipboard-rs = { workspace = true }

i18n-embed = { workspace = true }
i18n-embed-fl= { workspace = true }
rust-embed = { workspace = true } 
once_cell = { workspace = true } 
bstr = { workspace = true }

anyhow = "1.0.100"

# Optional collaboration dependencies
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
png = "0.18.0"
 