[package]
name = "icy_engine_gui"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { workspace = true }
icy_parser_core = { workspace = true }
icy_engine_gui_macros = { path = "../icy_engine_gui_macros" }
codepages = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"
tiny-skia = "0.11"
parking_lot = { workspace = true}
bitflags = { workspace = true}

icy_ui = { workspace = true, features = [ "tokio", "svg", "image", "advanced", "debug", "canvas", "lazy", "wgpu"  ]  }

lazy_static = { workspace = true }
 
log = { workspace = true }

image = { workspace = true }

i18n-embed = { workspace = true }
i18n-embed-fl= { workspace = true }
rust-embed = { workspace = true } 
once_cell = { workspace = true } 
regex = { workspace = true }

bytemuck = { workspace = true, features = ["derive"] }

# Sound/Music dependencies
anyhow = { workspace = true }
fastrand = { workspace = true }
rodio = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
semver = { workspace = true }

# File dialog
rfd = { workspace = true }

# for Atari ST GIST sounds (IGS)
ym2149 = { git ="https://github.com/mkrueger/ym2149-rs", branch="feature/gist_sound", features = ["streaming"] }
ym2149-gist-replayer = { git ="https://github.com/mkrueger/ym2149-rs", branch="feature/gist_sound" }
