[package]
name = "icy_engine_gui_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for icy_engine_gui dialog wrappers"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
