[package]
name = "icy_engine_scripting"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { workspace = true }
icy_parser_core = { workspace = true }
codepages = { workspace = true }
serde = { workspace = true }
mlua = { workspace = true }
image = { version = "0.25.1", features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dds", "qoi"] }
regex = { workspace = true }
web-time = "1.1"
parking_lot = { workspace = true }

lazy_static = { workspace = true }
log = { workspace = true }
