[package]
name = "icy_play"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

description = "Plays icy_anim files for bbs systems."
repository = "https://github.com/mkrueger/icy_tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icy_engine = { workspace = true }
icy_engine_scripting = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
crc32fast = "1.5.0"