[package]
name = "icy_term"
version = "0.7.12"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A terminal program supporting CP437, PetScii and ViewData"
repository = "https://github.com/mkrueger/icy_tools"

[dependencies]
icy_net = { git ="https://github.com/mkrueger/icy_board" }
#icy_net = { path ="../../../icy_board/crates/icy_net" }

egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
egui_glow = { workspace = true }
egui-modal = { workspace = true }
egui-bind = { workspace = true }
egui_file = { workspace = true }
tokio = { workspace = true }

glow = { workspace = true }
dark-light = "1.0.0"
serde = { workspace = true }
versions = "6.3.2"
regex = { workspace = true }
github_release_check = "0.2.1"
semver = { workspace = true }

#sound
rodio = { workspace = true }
icy_engine = { workspace = true }
icy_engine_gui = { workspace = true }

walkdir = { workspace = true }
toml = { workspace = true }

lazy_static = { workspace = true }
notify = "7.0.0"
gabi = "0.2.6"
arboard = { workspace = true }
chrono = { workspace = true }  # Utc hanldung
thiserror = { workspace = true }
anyhow = "1.0.95"

i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }

log = { workspace = true }
log4rs = "1.2.0"
web-time = "1.1.0"

# WebSocket support
tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots", # webpki root CAs
    "__rustls-tls",            # use Rustls
]}

http = "1.0.0"
url = "2.4.0"
rustls = { version = "0.22.2", features = [
    "tls12",
 #   "dangerous_configuration"  # Allow invalid certs/etc.
]}
webpki-roots = "0.26.0"
getrandom =  { version = "0.2.15", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { workspace = true }
open = "5.0.0"
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm_thread = { version = "0.2.0", features = ["es_modules"]}

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Icy Term"
identifier = "com.github.icy_term"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
revision=""
depends = "libasound2"
assets = [
    ["target/release/icy_term", "/usr/bin/", "755"],
    ["build/linux/icy_term.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_term.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_term.png", "644"],
]

